--- a/admin-app/views/editnews.ejs
+++ b/admin-app/views/editnews.ejs
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Admin</a>
+            <a class="navbar-brand" href="#">24x7 Admin</a>
             
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
