--- a/admin-app/views/auth.ejs
+++ b/admin-app/views/auth.ejs
@@ -18,7 +18,7 @@
                 <input type="text" class="form-control" name="username" id="username">
                 <br>
                 <label for="password">Password</label>
-                <input type="text" class="form-control" name="password" id="password">
+                <input type="password" class="form-control" name="password" id="password">
                 <br>
                 <button class="btn btn-primary" type="submit">Login</button>
             </form>
@@ -31,7 +31,7 @@
                 <input type="text" class="form-control" name="username" id="username">
                 <br>
                 <label for="password">Password</label>
-                <input type="text" class="form-control" name="password" id="password">
+                <input type="password" class="form-control" name="password" id="password">
                 <br>
                 <button class="btn btn-primary" type="submit">Register</button>
             </form>
