--- a/customer-app/views/partials/header.ejs
+++ b/customer-app/views/partials/header.ejs
@@ -15,8 +15,9 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="/sports">Sports</a></li>
-                <li class="nav-item"><a class="nav-link" href="/contact">About us</a></li>
-                <li class="nav-item"><a class="nav-link" href="/about">Contact us</a></li>  
+                <li class="nav-item"><a class="nav-link" href="/chat">Chat</a></li>
+                <li class="nav-item"><a class="nav-link" href="/about">About us</a></li>
+                <li class="nav-item"><a class="nav-link" href="/contact">Contact us</a></li>  
             </ul>
         </div>                                    
     </div>
