--- a/customer-app/views/about.ejs
+++ b/customer-app/views/about.ejs
@@ -17,27 +17,8 @@
         
         <div class="col">
           <h1 class="text-center " style=" font-family: 'Zilla Slab', serif; font-size: 70px;"><strong> About us</strong></h1>
-          <p class="text-justify " style="font-family: 'Zilla Slab', serif; font-size: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-            molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-            numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-            optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-            obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-            nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-            tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-            quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos 
-            sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
-            recusandae alias error harum maxime adipisci amet laborum. Perspiciatis 
-            minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit 
-            quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur 
-            fugiat, temporibus enim commodi iusto libero magni deleniti quod quam 
-            consequuntur! Commodi minima excepturi repudiandae velit hic maxime
-            doloremque. Quaerat provident commodi consectetur veniam similique ad 
-            earum omnis ipsum saepe, voluptas, hic voluptates pariatur est explicabo 
-            fugiat, dolorum eligendi quam cupiditate excepturi mollitia maiores labore 
-            suscipit quas? Nulla, placeat. Voluptatem quaerat non architecto ab laudantium
-            modi minima sunt esse temporibus sint culpa, recusandae aliquam numquam 
-            totam ratione voluptas quod exercitationem fuga. Possimus quis earum veniam 
-            quasi aliquam eligendi, placeat qui corporis!
+          <p class="text-justify " style="font-family: 'Zilla Slab', serif; font-size: 20px;">We ensure the highest levels of certainty and satisfaction through a deep-set commitment to our clients, comprehensive industry expertise and a global network of innovation and delivery centers.
+            Our mission is to help customers achieve their business objectives by providing innovative, best-in-class consulting, IT solutions and services and to make it a joy for all stakeholders to work with us.
             </p>
         </div>
       </div>
