--- a/customer-app/views/contact.ejs
+++ b/customer-app/views/contact.ejs
@@ -25,24 +25,17 @@
       </div>
     </div>
   </div>
-    <form id="form">
+    <form id="form" style = "padding: 20px;">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputEmail4" class="mb-3">Email</label>
-            <input type="email" class="form-control mb-3 " id="inputEmail4" name="email"placeholder="Email">
+            <input type="email" class="form-control mb-3 " id="email" name="email"placeholder="Email">
           </div>
         </div>
-        <div class="form-group">
-          <label for="inputAddress" class="mb-3">Address</label>
-          <input type="text" class="form-control mb-3" id="inputAddress" name="addr1"placeholder="1234 Main St">
-        </div>
-        <div class="form-group">
-          <label for="inputAddress2" class="mb-3">Address 2</label>
-          <input type="text" class="form-control mb-3" id="inputAddress2" name="addr2" placeholder="Apartment, studio, or floor">
-        </div>
+        
         <div class="form-floating">
            
-            <textarea class="form-control mb-3" placeholder="Leave a query here" name="comments" id="floatingTextarea" style="resize: None; height: 20vh;"></textarea>
+            <textarea class="form-control mb-3" placeholder="Leave a query here" name="comments" id="query" style="resize: None; height: 20vh;"></textarea>
             <label for="floatingTextarea">Query</label>
           </div>
  
@@ -58,6 +51,8 @@
 <!-- BS JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <!-- Have fun using Bootstrap JS -->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous"></script>
 <script type="text/javascript">
 
 function randomString(length, chars) {
@@ -72,6 +67,8 @@ $('#myModal').modal({
 $('#myModal').modal('hide')
 function handleForm(event) 
 { event.preventDefault(); 
+  axios.post("http://localhost:3000/api/post-query",{email:$('#email').val(), query:$('#query').val()}).then(res => console.log(res)) 
+  console.log();
     $('#referenceNumber').text(randomString(10, '0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'));
     $('#myModal').modal('show')
 
