--- a/admin-app/views/home.ejs
+++ b/admin-app/views/home.ejs
@@ -11,6 +11,9 @@
         <%-include ("./partials/navbar"); %>
 
         <div class="container" style="align-items: center;">
+            <div class="alert alert-success">
+                Username: <%= username %> , Email: <%= email %>
+            </div>
             <h2>
                 Welcome to the admin page!
             </h2>
