--- a/admin-app/views/auth.ejs
+++ b/admin-app/views/auth.ejs
@@ -30,6 +30,9 @@
                 <label for="username">Username</label>
                 <input type="text" class="form-control" name="username" id="username">
                 <br>
+                <label for="email">Email</label>
+                <input type="text" class="form-control" name="email" id="email">
+                <br>
                 <label for="password">Password</label>
                 <input type="password" class="form-control" name="password" id="password">
                 <br>
