--- a/admin-app/views/auth.ejs
+++ b/admin-app/views/auth.ejs
@@ -21,6 +21,7 @@
                 <input type="password" class="form-control" name="password" id="password">
                 <br>
                 <button class="btn btn-primary" type="submit">Login</button>
+                <a class="btn btn-secondary" href="/">Reset</a>
             </form>
             <br>
             <h1>
@@ -37,6 +38,7 @@
                 <input type="password" class="form-control" name="password" id="password">
                 <br>
                 <button class="btn btn-primary" type="submit">Register</button>
+                <a class="btn btn-secondary" href="/">Reset</a>
             </form>
         </div>
     </body>
