--- a/customer-app/views/about.ejs
+++ b/customer-app/views/about.ejs
@@ -19,10 +19,17 @@
           <h1 class="text-center " style=" font-family: 'Zilla Slab', serif; font-size: 70px;"><strong> About us</strong></h1>
           <p class="text-justify " style="font-family: 'Zilla Slab', serif; font-size: 20px;">We ensure the highest levels of certainty and satisfaction through a deep-set commitment to our clients, comprehensive industry expertise and a global network of innovation and delivery centers.
             Our mission is to help customers achieve their business objectives by providing innovative, best-in-class consulting, IT solutions and services and to make it a joy for all stakeholders to work with us.
+            <br><br>
+            We function as a full stakeholder to business, offering a consulting-led approach with an integrated portfolio of technology led solutions that encompass the entire Enterprise value chain. Our Customer-centric Engagement Model defines how we do engage with you, offering specialized services and solutions that meet the distinct needs of your business.
             </p>
         </div>
       </div>
     </div>
+    <footer>
+      <div>
+          <%- include ("./partials/footer"); %>
+      </div>
+    </footer>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </html>
