--- a/customer-app/views/chat.ejs
+++ b/customer-app/views/chat.ejs
@@ -61,8 +61,11 @@
         </div>
       </div>
     </div>
-
-
+    <footer>
+      <div>
+          <%- include ("./partials/footer"); %>
+      </div>
+    </footer>
   </body>
   <script
   src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js"
