--- a/customer-app/views/contact.ejs
+++ b/customer-app/views/contact.ejs
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <%-include ("./partials/head"); %>
   </head>
-<body style="font-family: 'Zilla Slab', serif;">
+<body>
   <%-include ("./partials/header"); %>
     <!-- Modal -->
 <div class="modal show" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -25,11 +25,11 @@
       </div>
     </div>
   </div>
-    <form id="form" style = "padding: 20px;">
+    <form id="form" style = "padding: 20px; font-family: 'Zilla Slab', serif;">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputEmail4" class="mb-3">Email</label>
-            <input type="email" class="form-control mb-3 " id="email" name="email"placeholder="Email">
+            <input type="email" class="form-control mb-3 " id="email" name="email" placeholder="Email">
           </div>
         </div>
         
@@ -43,7 +43,11 @@
         <button type="submit" class="btn btn-primary" >Submit Query</button>
       </form>
     </form>   
-
+    <footer>
+      <div>
+          <%- include ("./partials/footer"); %>
+      </div>
+    </footer>
 </body>
 <!-- JavaScript Bundle with Popper -->
 <!-- jQuery -->
@@ -67,7 +71,7 @@ $('#myModal').modal({
 $('#myModal').modal('hide')
 function handleForm(event) 
 { event.preventDefault(); 
-  axios.post("http://localhost:3000/api/post-query",{email:$('#email').val(), query:$('#query').val()}).then(res => console.log(res)) 
+  axios.post("http://localhost:3001/api/post-query",{email:$('#email').val(), query:$('#query').val()}).then(res => console.log(res)) 
   console.log();
     $('#referenceNumber').text(randomString(10, '0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'));
     $('#myModal').modal('show')
